# strinks

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  README.md  alembic.ini  mypy.ini  pyproject.toml  requirements_test.txt  setup.py  tox.ini
.githooks/: pre-commit
.github/workflows/: fetch.yml  tox.yml
alembic/: env.py
alembic/versions/: 1c1c021b2804_remove_brewery_string_field_from_beer_.py  3e10ea479777_add_untappdcache_table.py  a259d8878185_add_deeplcache_table.py  adf73c371c58_add_brewery_fields_and_beer_brewery_.py  de85214d9939_add_created_at_to_offering_table_for_.py
strinks/: __init__.py
strinks/api/: async_utils.py  chatgpt.py  deepl_cache.py  migrate_deepl_cache.py  ocr.py  settings.py  styles.py  translation.py  untappd.py  utils.py
strinks/api/backends/: __init__.py  volta.py
strinks/api/shops/: __init__.py  antenna.py  beershop.py  beerzilla.py  biyagura.py  bubbles.py  cardinal.py  cbm.py  chouseiya.py  craftbeeronline.py  craftbeers.py  digtheline.py  discovery.py  drinkup.py  engawa.py  gbf.py  goodbeer.py  hopbuds.py  ibrew.py  ichigo.py  maruho.py  ohtsuki.py  parsing.py  slopshop.py  threefeet.py  utils.py  volta.py
strinks/api/untappd/: __init__.py  api.py  auth.py  cache.py  migrate_cache.py  rank.py  structs.py  web.py
strinks/cli/: drop_users.py  fetch_breweries.py  fetch_had.py  init_db.py  scrape.py
strinks/db/: __init__.py  models.py  tables.py
strinks/web/: app.py  profiles.py
strinks/web/static/css/: base.css  offerings.css  shops.css
strinks/web/static/js/: base.js  getmdl-select.min.js  offerings.js  styles.js  tree.min.js
strinks/web/static/templates/: base.html
strinks/web/templates/: base.html  guide.html  offering_card.html  offerings.html  shops.html
tests/: test_dummy.py  test_models.py  test_parsing.py  test_shop_discovery.py  test_shops.py  test_untappd.py  test_utils.py
